styles/globals.css
/*
 * Globals
 */

 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');

 /* Links */
 a,
 a:focus,
 a:hover {
   color: #000;
 }
 
 /*
   * Base structure
   */
 
   @font-face {
    font-family: 'Inter';
    src: url('../public/Inter-VariableFont_slnt,wght.ttf') format('truetype');
    font-weight: 100 1000;
  }
 
  @font-face {
    font-family: 'Eurostile';
    src: url('../public/Eurostile-Bold.ttf') format('truetype');
    font-weight: 100 1000;
  }
   
 body {
   background-color: #dffd56;
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
   color: #000;
 }
 
 .title-image {
   padding: 40px;
   width: 100%;
 }
 
 .square-container-desktop {
   text-align: center;
 }
 
 .square-container-mobile {
   display: none;
 }
 
 .square-img {
   width: 80%;
   margin: auto;
 }
 
 .main-text-container {
   padding-top: 20px;
   align-self: center;
 }
 
 .heading-main-text {
   font-weight: bolder;
   font-size: 1rem;
   margin-bottom: 24px;
 }
 
 .main-text-body {
   font-size: 3rem;
   line-height: 3rem;
   font-weight: 500;
   margin-bottom: 12px;
   font-family: 'Eurostile';
  font-family: 'Eurostile';
font-style: normal;
font-weight: 700;
font-size: 64px;
line-height: 120%;
 }
 
 .main-text-subtitle {
   font-size: 2rem;
   margin-bottom: 24px;
   font-family: 'Inter';
font-style: normal;
font-weight: 400;
font-size: 24px;
line-height: 120%;

letter-spacing: 0.04em;
text-transform: uppercase;
 }
 
 .button {
   background-color: rgb(0, 0, 0);
   border-radius: 50px;
   color: rgb(255, 255, 255);
   border: 1px solid transparent;
 }
 .button:focus {
  background-color: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  box-shadow: none;
 }
 .button:active {
  background-color: #dffd56;
  color: rgb(0, 0, 0);
  box-shadow: none;
 }
 .button:hover {
   color: rgb(0, 0, 0);
   background-color: #fff;
   border: 1px solid #000;
 }
 
 .button:not(:disabled):not(.disabled).active,
 .button:not(:disabled):not(.disabled):active,
 .show > .button.dropdown-toggle .button:active {
   color: #000;
   background-color: #fff;
   border: 1px solid #000;
 }
 
 .btn-social {
   font-size: 2rem;
   padding: 10px 25px;
   font-family: 'Inter';
font-style: normal;
font-weight: 300;
font-size: 32px;
line-height: 39px;
 }
 
 .arrow {
   width: 32px;
   margin-left: 5px;
   margin-bottom: 5px;
 }
 
 .info-box-section {
   display: grid;
   place-items: center;
 }
 
 .info-box-article {
   width: 80%;
 }
 
 .info-box-item {
   /* padding: 5% 13%; */
   align-self: center;
 }
 
 .black-90-desktop {
   display: block;
 }
 
 .black-90-mobile {
   display: none;
 }
 
 .learn-more {
   background-image: url('./../public/bg-circles.png');
   background-size: cover;
   height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
 }
 
 .socials-section {
  width: 100%;
  display: flex;
  justify-content: space-around;
  margin-top: 100px;
}
.language-section {
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 20px;
  margin-bottom: 50px;
  margin-top: 50px;

}

.language {
  box-sizing: border-box;
cursor: pointer;
  /* Auto layout */
  
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  padding: 6px 12px;
  gap: 10px;
  
  
  border: 1px solid #000000;
  border-radius: 12px;
}


.socials {
  background-image: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url('./../public/bg-circles.png');
  background-position: center;
  background-size: cover;
  height: 50vh;
  display: grid;
  place-items: center;
  margin-top: 50px;
  /* align-items: center;
  justify-content: center; */
}

 
 .bottom-modal-top {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin: 0;
   padding: 48px;
   gap: 46px;
 
   width: 80%;
   height: 214px;
 
   background: #000000;
   border-radius: 32px 32px 0px 0px;
 }
 
 .bottom-modal-bottom {
   display: flex;
   flex-direction: row;
   margin: 0;
   justify-content: space-between;
   align-items: center;
   gap: 24px;
 
   width: 80%;
 
   background: #DFFD56;
   border-radius: 0px 0px 32px 32px;
 }
 
 .sub-titles {
   color: #DFFD56;
   font-family: 'Inter';
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 108.02%;
    display: flex;
    width: 40%;
    padding: 24px;
    cursor: pointer;
    gap: 16px;
 }
 
 .sub-title-primary {
   color: #000;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 108.02%;
   width: 40%;
   display: flex;  
   flex-direction: row;
   padding: 24px;
   gap: 16px;
 
   background: #DFFD56;
   border-radius: 24px;
 }
 
 .links-section {
   display: flex;
   place-content: center;
   height: 76vh;
 }
 
 .links-group {
   place-self: center;
   margin: 0px 30px;
 }
 
 .divider {
   border: 0.5px solid;
   margin: 0.5rem 0rem;
 }
 
 .link-title {
   font-weight: bold;
 }
 
 .info-box-description {
   margin-top: 20px;
   font-family: 'Inter';
font-style: normal;
font-weight: 300;
font-size: 16px;
line-height: 150%;
 }
 
 .info-box-title {
   font-size: 3rem;
   line-height: 3rem;
   font-family: 'Eurostile';
  font-style: normal;
  font-weight: 700;
  font-size: 48px;
  line-height: 120%;
/* or 58px */

letter-spacing: 0.04em;
text-transform: uppercase;
 }
 
 .social-btn {
   background-color: rgb(0, 0, 0);
 }
 
 .cover {
   padding: 0 5px;
 }
 
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0px;
   gap: 10%;
   background: #DFFD56;
   margin-bottom: 100px;
 }
 
 .link-block {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
   gap: 6px;
   height: 200px;
 }
 
 .separator {
   border: 0.5px solid black;
   width: 150%;
 }

 .img-container {
  position: relative;
}

.overlay-img {
  position: absolute;
  top: 0;
  left: 0;
}

.header-icon {
  width: 48px;
}
.madeBy {
  position: absolute;
  /* bottom: 0; */
  right: 20px;
  height: 50px;
}

.inputWrapper{
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  box-sizing: border-box;
  margin-right: 1rem;
  border: 1px solid rgb(48, 51, 56);
  border-radius: 1.5rem;
  padding: 0.5rem 0.8rem;
  width: 290px;
}

.input {
  color: black;
    font-weight: 500;
    text-align: left;
    border: none;
    background: none transparent;
    box-shadow: none;
    width: 100%;
    box-sizing: border-box;
    outline: none;

    font-family: 'Eurostile';
font-style: normal;
font-weight: 700;
font-size: 16px;
line-height: 120%;
}

.sign-up-modal {
  display: flex;
flex-direction: column;
align-items: center;
padding: 0px;
gap: 48px;

width: 70%;
/* height: 30vh; */

background: #DFFD56;
border-radius: 32px;
}
 

 @media screen and (max-width: 600px) {

    .floating-dxdao {
      right: 20px;
      bottom: 60%;
      height: 159px;
      width: 32px;
    }
   .title-image {
     padding: 20px;
   }
   .square-container-desktop {
     display: none;
   }
   .square-container-mobile {
     display: none;
     width: 300px;
   }
   .square-img {
     width: 100%;
   }
   .main-text-container {
     padding: 20px 0px;
     align-self: center;
   }
 
   .main-text-body {font-family: 'Eurostile';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 120%;
   }
 
   .main-text-subtitle {
    font-family: 'Inter';
font-style: normal;
font-weight: 400;
font-size: 16px;
line-height: 150%;
   }
 
   .button {
     font-size: 2rem;
   }
 
   .info-box-article {
     width: 100%;
   }

   .info-box-title {
    font-family: 'Eurostile';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 108.02%;
   }

   .info-box-description {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 300;
    font-size: 16px;
    line-height: 150%;
   }
 
   .black-90-desktop {
     display: none;
   }
   .black-90-mobile {
     display: block;
   }
 
   .socials-section {
     display: grid;
     margin: 50px 0px;
   }
   .btn-social {
     margin: 30px;
   }
   .info-box-section {
     display: block;
   }
 
   .links-section {
     display: grid;
     margin-top: 30px;
   }
 
   .links-group {
     place-self: center;
     margin: 30px 30px;
     width: 70%;
   }
   .learn-more {
      height: auto;
      padding: 10% 0%
   }
   .bottom-modal-top {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin: 0;
     padding: 32px;
     gap: 23px;
   
     width: 90%;
     height: auto;
   
     background: #000000;
     border-radius: 32px 32px 0px 0px;
   }
   .sub-titles {
    width: 100%;
   }
  .sub-title-primary {
    width: 100%;
  }
  .bottom-modal-bottom {
    display: flex;
    flex-direction: row;
    margin: 0;
    justify-content: space-between;
    align-items: center;
    gap: 24px;
    padding: 24px;
  
    width: 90%;
  
    background: #DFFD56;
    border-radius: 0px 0px 32px 32px;
  }
  .footer {
    flex-direction: column;
  }
  .link-block {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 6px;
    height: 200px;
    margin: auto;
    width: 90%
  }
  .separator {
    width: 100%;
  }

  .madeBy {
    left: 20px;
    height: 71px;
  }
  .socials {
    display:none;
  }
 }
 

